removed info enrolment